--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,29 @@
   box-sizing: border-box;
   font-family: "Courier New", Courier, monospace;
 }
-h1{
-    margin-top: 5rem;
-    text-align: center;
+.newbtn {
+  margin-top: 25px;
+  text-align: center;
+}
+
+dialog{
+  margin: auto;
+  width: 20rem;
+  height: 10rem;
+}
+
+
+.newbtn > button {
+  padding: 15px 30px;
+  font-size: 20px;
+  background-color: rgb(139, 255, 240);
+}
+
+.newbtn > button:hover {
+  background-color: rgb(1, 218, 181);
+}
+
+h1 {
+  margin-top: 5rem;
+  text-align: center;
 }
