--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ dialog[open] {
   justify-content: space-around;
   overflow: hidden;
   background-color: palegoldenrod;
+  border-radius: 5px;
+  border: 3px solid black;
 }
 
 .newbtn > button {
@@ -42,8 +44,12 @@ h1 {
   padding: 5px;
 }
 
+.dialog-container > dialog > form > div > input:focus {
+  outline: none;
+}
+
 .dialog-container > dialog > form > div {
-  font-size: 25px;
+  font-size: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -53,23 +59,21 @@ h1 {
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   gap: 20px;
-  margin-top: -30px;
+  margin-top: -15px;
 }
 
 #checkbx {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
 }
 
 input[type="checkbox"]{
-  transform: scale(1.8);
+  transform: scale(2);
 }
 
-.addBtn button{
-  padding: 5px;
-}
+
 
 .dialog-container > dialog > div > button{
   font-size: 25px;
@@ -81,6 +85,7 @@ input[type="checkbox"]{
   margin-top: -25px;
   margin-right: -22px;
   font-size: 20px;
+  border-radius: 10px;
 }
 .X > button{
   padding-left: 5px;
