--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 .newbtn {
-  margin-top: 25px;
+  margin-top: 10px;
   text-align: center;
 }
 
@@ -33,7 +33,7 @@ dialog[open] {
 }
 
 .newbtn > button {
-  padding: 20px 30px;
+  padding: 15px 25px;
   font-size: 20px;
   background-color: rgb(139, 255, 240);
   border-radius: 10px;
@@ -45,8 +45,8 @@ dialog[open] {
 }
 
 .main-title {
-  font-size: 3.5rem;
-  margin-top: 5rem;
+  font-size: 2.5rem;
+  margin-top: 1rem;
   text-align: center;
 }
 
@@ -102,7 +102,7 @@ input[type="checkbox"] {
 }
 
 .books-container {
-  margin-top: 50px;
+  margin-top: 10px;
   width: 100rem;
   background-color: rgb(255, 226, 188);
   border: 4px solid black;
@@ -110,27 +110,28 @@ input[type="checkbox"] {
 }
 
 .books-container > h1 {
+  font-size: 1.5rem;
   margin-left: 30px;
-  margin-top: 30px;
+  margin-top: 15px;
 }
 
 .cards-container {
   height: 100%;
-  margin: 20px;
+  margin: 10px;
   border-radius: 10px;
   border: 4px solid black;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
   padding: 20px;
-  min-height: 750px;
+  min-height: 700px;
   background-color: blanchedalmond;
 }
 
 .card {
   margin: 10px;
-  min-height: 280px;
-  max-height: 300px;
+  min-height: 250px;
+  max-height: 280px;
   border: 4px solid rgb(218, 178, 0);
   background-color: rgb(255, 208, 0);
   display: flex;
@@ -138,7 +139,7 @@ input[type="checkbox"] {
   justify-content: space-between;
   border-radius: 5px;
   gap: 20px;
-  padding: 20px;
+  padding: 10px;
 }
 
 .card .card-description {
@@ -149,7 +150,7 @@ input[type="checkbox"] {
 .card h1 {
   word-wrap: break-word;
   overflow-wrap: break-word;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
 }
 
 .card h3,
@@ -158,7 +159,7 @@ input[type="checkbox"] {
 }
 
 .card .card-buttons > button {
-  margin: 5px;
+  margin: 5px 0px;
   font-size: 17px;
   padding: 10px;
   border-radius: 7px;
